--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -80,6 +80,15 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\thoma\\miniconda3\\lib\\site-packages\\IPython\\core\\magics\\pylab.py:159: UserWarning: pylab import has clobbered these variables: ['grid']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "  warn(\"pylab import has clobbered these variables: %s\"  % clobbered +\n"
+     ]
     }
    ],
    "source": [
@@ -88,14 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
-    "from sklearn.metrics import f1_score"
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -576,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9365378573672635"
+       "0.9459330902172189"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +722,7 @@
        "0.9237947122861586"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,10 +766,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#creation du dictionnaire\n",
+    "liste_k = [2*i+1 for i in range(4)]\n",
+    "dico = {'n_neighbors':liste_k}\n",
+    "dico = [dico]\n",
+    "nb_folds = 5\n",
+    "\n",
+    "#creation de la grille\n",
+    "grid = GridSearchCV(neighbors.KNeighborsClassifier(), dico, cv = nb_folds, refit = False)\n",
+    "grid.fit(X_train, y_train)\n",
+    "\n",
+    "k_optimal = grid.best_index_ + 1\n",
+    "print(k_optimal)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -769,10 +802,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9397916666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_score_best = grid.best_score_\n",
+    "print(f_score_best)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -785,10 +829,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9486356340288925"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modele_1 = neighbors.KNeighborsClassifier(n_neighbors=1)\n",
+    "modele_1.fit(X_train, y_train)\n",
+    "pred_1 = modele_1.predict(X_test)\n",
+    "f1_score(y_test, pred_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finir commentaire"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -819,10 +886,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=1000, penalty='none')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logi = LogisticRegression(penalty = 'none', max_iter = 1000)\n",
+    "logi.fit(X_train,y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -834,10 +915,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7661691542288558\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = logi.predict(X_test)\n",
+    "F_score = metrics.f1_score(y_test,y_pred)\n",
+    "print(F_score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -848,11 +941,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Le F_score obtenu à la question précédente est assez faible\n",
+    "# A finir"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1045,21 +1139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_pred_final' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-68-6b1b5886e5df>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Save array to file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m np.savetxt(\"test_file.tsv\", \n\u001b[1;32m----> 3\u001b[1;33m            \u001b[0my_pred_final\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m            \u001b[0mfmt\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'%d'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m            \u001b[0mheader\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Prediction'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'y_pred_final' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save array to file\n",
     "np.savetxt(\"test_file.tsv\", \n",
